fixes overflow issue #50

--- a/github-dark.css
+++ b/github-dark.css
@@ -2,7 +2,7 @@
 
 @-moz-document regexp("^https?://((gist|help|status|developer)\.)?github\.com.*") {
 
-/* Github Dark Theme v1.3.10 (10/2/2013)
+/* Github Dark Theme v1.3.11 (10/12/2013)
  * https://github.com/Mottie/Github-Dark
  * http://userstyles.org/styles/37035
  * License: http://sam.zoy.org/wtfpl/
@@ -17,6 +17,9 @@
  /* === Prevent overflow issues === */
  #dashboard,div.highlight,svg {
   width: 100% !important;
+ }
+ .vcard-fullname, .vcard-username {
+  overflow-y: hidden;
  }
 
  /* === logo === */
@@ -34,7 +37,7 @@
 
  /* help.github.com */
  body#com div#header .site-logo a {
-  background-image: url(http://mottie.github.com/Github-Dark/images/logo.png) !important;
+  background-image: url(http://mottie.github.io/Github-Dark/images/logo.png) !important;
  }
 
  /* === needs padding === */
@@ -155,6 +158,9 @@
  /* code */
  .linkable-line-number {
   border-right: #555 1px solid !important;
+ }
+ .diff-line-num, .blob-line-nums {
+  vertical-align: middle !important;
  }
  /* code editor padding - code */
  .file-code-line .blob-line-code .highlight {
@@ -702,13 +708,13 @@
   padding-top: 22px !important;
  }
  #network .repo img[alt="T"] {
-  background: url(http://mottie.github.com/Github-Dark/images/t.png) no-repeat !important;
+  background: url(http://mottie.github.io/Github-Dark/images/t.png) no-repeat !important;
  }
  #network .repo img[alt="I"] {
-  background: url(http://mottie.github.com/Github-Dark/images/i.png) no-repeat !important;
+  background: url(http://mottie.github.io/Github-Dark/images/i.png) no-repeat !important;
  }
  #network .repo img[alt="L"] {
-  background: url(http://mottie.github.com/Github-Dark/images/l.png) no-repeat !important;
+  background: url(http://mottie.github.io/Github-Dark/images/l.png) no-repeat !important;
  }
 
  /* === Images === */
@@ -744,7 +750,7 @@
  }
 
  .closed-banner {
-  background-image: url(http://mottie.github.com/Github-Dark/images/closed_pattern.gif) !important;
+  background-image: url(http://mottie.github.io/Github-Dark/images/closed_pattern.gif) !important;
  }
 
  .search .minibutton span {
@@ -753,7 +759,7 @@
 
  /* issue labels manager */
  #issues_next .sidebar .labels-editable .label-target .delete a {
-  background-image: url(http://mottie.github.com/Github-Dark/images/delete.png) !important;
+  background-image: url(http://mottie.github.io/Github-Dark/images/delete.png) !important;
  }
  /* history expand buttons */
  .commit .minibutton.expander-minibutton span {
@@ -767,18 +773,18 @@
   border-color: transparent #333 transparent transparent !important;
  }
  .mini-avatar-bubble {
-  background-image: url(http://mottie.github.com/Github-Dark/images/bubble-arrow-up.png) !important;
+  background-image: url(http://mottie.github.io/Github-Dark/images/bubble-arrow-up.png) !important;
  }
  /* pull request avatar bubble */
  #issues_search .comment {
-  background: url(http://mottie.github.com/Github-Dark/images/bubble-arrow.png) 2px 21px no-repeat !important;
+  background: url(http://mottie.github.io/Github-Dark/images/bubble-arrow.png) 2px 21px no-repeat !important;
  }
  /* developer pages */
  div.expandable > ul h3 > a.collapsed, div.expandable > ul h3 > a.expanded {
-  background-image: url(http://mottie.github.com/Github-Dark/images/expand-arrows.png) !important;
+  background-image: url(http://mottie.github.io/Github-Dark/images/expand-arrows.png) !important;
  }
  body.api .content h2 {
-  background-image: url(http://mottie.github.com/Github-Dark/images/crud-sprite.png) !important;
+  background-image: url(http://mottie.github.io/Github-Dark/images/crud-sprite.png) !important;
  }
 
  /* darkest border */
